# agoramesh

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SECURITY_AUDIT_2026-03-13.md  SECURITY_AUDIT_PREP.md  docker-compose.dev.yml  docker-compose.yml  package.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  dependabot-auto-merge.yml  deploy.yml  security.yml
bridge/: .env.example  Dockerfile  README.md  agent-card.config.json  docker-compose.yml  package-lock.json  package.json
bridge/fixtures/: seed-agents.json
bridge/scripts/: seed-agents.ts
bridge/src/: a2a.ts  ai-arbitration.ts  cli.ts  config.ts  did-auth.ts  errors.ts  (+15 more)
contracts/: .env.example  .gas-snapshot  DEPLOYMENT.md  README.md  SETUP.md  SLITHER_REPORT.md  TEST_REPORT.md  slither.config.json
deployments/: local.json  sepolia.json
docs/: architecture.md
mcp/: .env.example  Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
node/: Cargo.toml  Dockerfile  README.md  config.local.toml  docker-compose.yml  fly.toml  prometheus.yml
node/benches/: p2p_benchmarks.rs
node/src/: api.rs  arbitration.rs  circuit_breaker.rs  config.rs  contract.rs  did.rs  discovery.rs  error.rs  events.rs  lib.rs  main.rs  metrics.rs  multichain.rs  network.rs  persistence.rs  rate_limit.rs  trust.rs  trust_cache.rs
node/src/network/: behaviour.rs  message_handler.rs  swarm.rs
node/src/plugin/: mod.rs  registry.rs
node/src/search/: embedding.rs  hybrid.rs
node/tests/: api_integration_test.rs  e2e_integration_test.rs  load_test.rs
node/tests/common/: mod.rs
scripts/: release-sdk.sh
sdk/: API_REFERENCE.md  QUICKSTART.md  README.md  package-lock.json  package.json
(+205 files in other folders)
