[package]
name = "agentmesh-node"
version = "0.1.0"
edition = "2021"
description = "AgentMesh P2P node for decentralized agent marketplace"
license = "MIT OR Apache-2.0"
repository = "https://github.com/timutti/agentmesh"
keywords = ["agents", "p2p", "blockchain", "marketplace"]
categories = ["network-programming", "cryptography"]

[dependencies]
# P2P networking
libp2p = { version = "0.56", features = ["tcp", "noise", "yamux", "kad", "gossipsub", "identify", "mdns", "macros", "tokio"] }

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Ethereum/EVM interaction
alloy = { version = "1.5", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
bincode = "1.3"

# Persistence
rocksdb = "0.24"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP API
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Rate limiting
governor = "0.8"
tower = "0.5"

# Metrics/Observability
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Error handling
thiserror = "2.0"

# Cryptographic utilities
subtle = "2.6"

# Utilities
futures = "0.3"
async-trait = "0.1"
static_assertions = "1.1"
urlencoding = "2.1"
uuid = { version = "1.12", features = ["v4"] }

# Semantic search
fastembed = "4"
qdrant-client = "1"
lru = "0.13"

# Caching
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
tempfile = "3.24"
tokio-test = "0.4"
axum-test = "18.7"
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.8"

[[bin]]
name = "agentmesh"
path = "src/main.rs"

[[bench]]
name = "p2p_benchmarks"
harness = false
